# audiosub

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  audiosub.toml  decomposition_plan.md  docker-compose.yml  summary.md
.githooks/: pre-commit
.github/workflows/: ci.yml
.zed/: settings.json
reports/: 2026-05-28_20-13-52.md  2026-05-28_20-14-10.md  2026-05-28_20-16-11.md  2026-05-28_20-16-21.md  2026-05-28_20-18-17.md  2026-05-28_20-47-03.md  2026-05-28_20-51-05.md  2026-05-28_20-56-53.md  2026-05-28_21-02-00.md  2026-05-28_23-56-41.md  2026-05-29_00-22-00.md  2026-05-29_00-25-00.md  2026-05-29_00-30-00.md  2026-05-29_0028.md  2026-05-29_11-37-14.md  2026-05-29_11-42-12.md  2026-05-29_20-32-35.md  2026-05-29_201634.md  2026-05-30_001000.md  2026-05-31_194614.md  2026-05-31_201531.md  2026-05-31_multithread_plan.md  decomposition_plan.md
reports/2026-05-28/: 20-36-31.md  20-37-02.md  20-38-15.md  20-58-29.md  21-41-28.md  23-30-00.md
reports/2026-05-29/: 00-30-00-2.md  00-31-00.md  11-54-00.md  12-02-00.md  12-05-00.md  12-10-00.md
reports/2026-05-30/: 19-28-48.md
reports/2026-05-31/: 20-30-00.md  23-57-32.md
reports/2026-06-01/: 00-48-00.md
saved/: audiosub_2026-05-29_14-56-36.txt
scripts/: ci-check.sh
src/: cli.rs  config.rs  lib.rs  logging.rs  main.rs  redirect_stderr.rs
src/asr/: mod.rs  vosk_backend.rs  whisper_backend.rs
src/audio/: mod.rs  monitor.rs  pulse.rs  resampler.rs
src/subtitle/: buffer.rs  mod.rs  output.rs  srt.rs  vtt.rs
src/tui/: app.rs  capture.rs  export.rs  input.rs  mod.rs  screen.rs  widgets.rs  (+1 more)
(+7 files in other folders)
