[package]
name = "audiosub"
version = "0.1.0"
edition = "2024"
description = "Real-time automatic subtitles for Ubuntu — capture system audio and generate subtitles via Vosk or Whisper.cpp"
authors = ["Alexey"]
license = "MIT"

[features]
default = ["vosk"]
vosk = ["dep:vosk"]
whisper = ["dep:whisper-rs"]

[dependencies]
# CLI & Config
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Audio
libpulse-binding = "2"
libpulse-simple-binding = "2"
rubato = "3"

# ASR
vosk = { version = "0.3", optional = true }
whisper-rs = { version = "0.14", optional = true }

# Subtitle formatting
chrono = "0.4"

# Error handling
anyhow = "1"
thiserror = "2"

# TUI
ratatui = { version = "0.29", features = ["all-widgets"], optional = true }
crossterm = { version = "0.28", optional = true }

# Model download
reqwest = { version = "0.12", features = ["stream"], optional = true }

# Utility
duct = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[lints.rust]
unsafe_code = "deny"
